# d6engine

./: .coveragerc  .editorconfig  .gitignore  .readthedocs.yml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README.rst  docker-compose.debug.yml  docker-compose.yml  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
d6engine/: __init__.py  __main__.py  asset.py  attribute.py  character.py  cli.py  server.py  settings.py  urls.py  wsgi.py
d6engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
d6engine/character/: base.py
d6engine/client/: main.py
d6engine/data/: attribute.yaml  attributes.yaml  character.yaml  character_data_structure.py  feature.yaml
d6engine/models/: character.py  components.py
d6engine/resource/: __init__.py  attribute.py  base.py  character.py  dice.py  trait.py  type.py
d6engine/resource/test/: test_characterentry.py
d6engine/routers/: character.py  dice.py
d6engine/server/: cli.py  main.py
data/: attributes.json  attributes.schema.json  character.json  character.schema.json  character.yaml  key.json  key.schema.json  state.json  state.schema.json  traits.json  traits.schema.json
data/old/: advancement.yaml  character.yaml  character_data_structure.py  trait.yaml
db/: 83451.d6char.json  83453.d6char.json  83458.d6char.json
docs/: character_schema.json  character_sheet.yaml  d6_attributes.md  d6_char_uuid.md  d6egine.md  index.md  lexicon.yaml  notes.md  realms.md  requirements.txt  todos.md  tools.md
docs/refrence/: base.md  d6engine.resource.base.html  d6engine.uml
docs/refrence/resource/: base.md
pip-wheel-metadata/d6engine.dist-info/: METADATA
pip-wheel-metadata/realms.dist-info/: METADATA  entry_points.txt  top_level.txt
realms/: __main__.py  cli.py
tests/: d6_attribute.py  d6_attribute_list.py  test_attribute.py
