[tool.poetry]
name = "d6engine"
version = "0.1.3"
description = "OpenD6 character engine"
authors = ["Chuck Moreland <chuck@d6engine.org>"]
license = "GPL-3.0+"

readme = 'README.md'

repository = "https://gitlab.com/thechuckmo/d6engine"
homepage = "https://d6engine.org"

keywords = ['dice', 'd6engine', 'opend6']

[tool.poetry.dependencies]
python = "^3.6"
tornado = "^6.0"
pyyaml = "^5.1"
click = "^7.0"
python-slugify = "^3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4"
mkdocs = "^1.0"
mkdocs-cluster = "^0.0.9"

[tool.poetry.scripts]
d6server = 'd6engine.server.main:cli'
d6client = 'd6engine.client.main:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

