[tool.poetry]
name = "d6engine"
version = "0.1.5"
description = "OpenD6 character engine"
authors = ["Chuck Mo <chuck@d6engine.org>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
aiofiles = "^0.4.0"
fastapi = "^0.47.1"
uvicorn = "^0.11.2"
pydantic = {extras = ["email"], version = "^1.3"}

[tool.poetry.dev-dependencies]
mkdocs-cluster = "^0.0.9"
pytest = "^5.3.3"
mkdocs = "^1.0.4"
httpie = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
